--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div id="red">
-            <div id="logo"><img src="/img/googlelogo_clr_148x48px.svg" alt="" id="logo1"></div>
+            <div id="logo"><img src="img/googlelogo_clr_148x48px.svg" alt="" id="logo1"></div>
             <div>Analytics Academy</div>
         </div>
         <div id="blue">
@@ -20,40 +20,40 @@
                 <h2>Learn analytics with free online courses</h2>
                 <p>Analytics Academy helps you learn about Google's measurement tools so that you can grow your business through intelligent data collection and analysis.</p>
             </div>
-            <div ><img src="/img/hero_academy.jpg" alt="" id="backgroung"></div>
+            <div ><img src="img/hero_academy.jpg" alt="" id="backgroung"></div>
         </div>
     </main>
 
     <main id="main2">
         <div id="sky">
             <div id="temp1">
-                <img src="/img/logo_google_analytics.png" alt="" id="sis" >
+                <img src="img/logo_google_analytics.png" alt="" id="sis" >
                 <h2>Google Analytics for Beginners</h2>
                 <p id="para1">Learn the basic features of Google Analytics including how to create an account, implement tracking code, analyze basic reports, and set up goals and campaign tracking.</p>
             </div>
             <div id="temp2">
-                <img src="/img/logo_google_analytics.png" alt="" id="sis" >
+                <img src="img/logo_google_analytics.png" alt="" id="sis" >
                 <h2>Google Analytics for Beginners</h2>
                 <p id="para1">Learn the basic features of Google Analytics including how to create an account, implement tracking code, analyze basic reports, and set up goals and campaign tracking.</p>
             </div>
             <div id="temp3">
-                <img src="/img/logo_google_analytics.png" alt="" id="sis" >
+                <img src="img/logo_google_analytics.png" alt="" id="sis" >
                 <h2>Google Analytics for Beginners</h2>
                 <p id="para1">Learn the basic features of Google Analytics including how to create an account, implement tracking code, analyze basic reports, and set up goals and campaign tracking.</p>
             </div>
             <div id="temp4">
-                <img src="/img/logo_google_analytics.png" alt="" id="sis" >
+                <img src="img/logo_google_analytics.png" alt="" id="sis" >
                 <h2>Google Analytics for Beginners</h2>
                 <p id="para1">Learn the basic features of Google Analytics including how to create an account, implement tracking code, analyze basic reports, and set up goals and campaign tracking.</p>
             </div>
 
             <div id="temp5">
-                <img src="/img/logo_gmp_data_studio_192px.png" alt="" id="sis">
+                <img src="img/logo_gmp_data_studio_192px.png" alt="" id="sis">
                 <h2>Introduction to Data Studio</h2>
                 <p id="para1">Introduction to Data Studio helps you learn and practice beginner steps in connecting your data and building Data Studio reports.</p>
             </div>
             <div id="temp6">
-                <img src="/img/logo_gmp_tag_manager_192px.png" alt="" id="sis">
+                <img src="img/logo_gmp_tag_manager_192px.png" alt="" id="sis">
                 <h2>Google Tag Manager Fundamentals</h2>
                 <p id="para1">Discover how Google Tag Manager can simplify the tag implementation and management process for marketers, analysts, and developers.</p>
             </div>   
@@ -66,7 +66,7 @@
         <div class="main3div1">
 
         <div id="imgdiv">
-            <img src="/img/ins_justin_cutroni_1x.jpg" alt="" class="main3img">
+            <img src="img/ins_justin_cutroni_1x.jpg" alt="" class="main3img">
         </div>
 
                 <div  class="main3div">
@@ -80,7 +80,7 @@
 
     <div class="main3div2">
         <div id="imgdiv">
-            <img src="/img/ins_krista_seiden_1x.jpg" alt="" class="main3img">
+            <img src="img/ins_krista_seiden_1x.jpg" alt="" class="main3img">
         </div>
             
                 <div class="main3div">
@@ -94,7 +94,7 @@
             <div class="main3div3">
 
                 <div id="imgdiv">
-                    <img src="/img/ins_ashish_vij_1x.jpg" alt="" class="main3img">
+                    <img src="img/ins_ashish_vij_1x.jpg" alt="" class="main3img">
                 </div>
         
                         <div  class="main3div">
@@ -112,20 +112,20 @@
         <p class="over">For an overview of other Google Marketing Platform Analytics products, check out the Analytics Mini-Courses on YouTube. There you can learn how to create your account; set up your first report, tag, or test; and use Google Analytics for Firebase, Google Tag Manager, Google Optimize, and more.</p>
         <div class="lastgrid">
             <div class="last01">
-                <img src="/img/logo_google_analytics_for_firebase_1-icon_light.png" alt="" class="lastimg">
+                <img src="img/logo_google_analytics_for_firebase_1-icon_light.png" alt="" class="lastimg">
                 <div> <a href="">Getting Started with Google Analytics for Firebase</a></div>
             </div>
             <div class="last02">
-                <img src="/img/logo_gmp_tag_manager_192px.png" alt=""class="lastimg">
+                <img src="img/logo_gmp_tag_manager_192px.png" alt=""class="lastimg">
                 <div><a href="">Getting Started with Google Tag Manager</a></div>
             </div>
 
             <div class="last01">
-                <img src="/img/logo_gmp_data_studio_192px.png" alt="" class="lastimg">
+                <img src="img/logo_gmp_data_studio_192px.png" alt="" class="lastimg">
                 <div> <a href="">Getting Started with Google Analytics for Firebase</a></div>
             </div>
             <div class="last02">
-                <img src="/img/logo_gmp_optimize_tile_192px.png" alt=""class="lastimg">
+                <img src="img/logo_gmp_optimize_tile_192px.png" alt=""class="lastimg">
                 <div><a href="">Getting Started with Google Tag Manager</a></div>
             </div>
         </div>
